--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <li><a href="#how-it-works">Cara Kerja</a></li>
                 <li><a href="#about">Tentang</a></li>
             </ul>
-            <button class="nav-btn">Daftar</button>
+           <a href="registrasi.html" class="nav-btn">Daftar</a>
         </nav>
     </header>
 
