--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="img/hero.jpg" alt="Hero Image" style="display: none;">
+                <img src="img/hero.jpg" alt="Hero Image" style="width:100%; height:auto;">
                 <div style="color: #ccc; font-size: 4rem;">📸</div>
             </div>
         </div>
@@ -651,4 +651,5 @@
     </script>
 </body>
 </html>
+
 
