--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="img/hero.jpg" alt="Hero Image" style="width:100%; height:auto;">
+                <img src="img/hero.jpg" alt="Hero Image">
             </div>
         </div>
     </section>
@@ -650,6 +650,7 @@
     </script>
 </body>
 </html>
+
 
 
 
