--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <section class="about" id="about">
         <div class="about-content">
             <div class="about-image">
-                <img src="images/about-image.jpg" alt="About Image" style="display: none;">
+                <img src="img/about.jpg" alt="About Image">
                 <div style="color: #ccc; font-size: 4rem;">📸</div>
             </div>
             <div class="about-text">
@@ -650,6 +650,7 @@
     </script>
 </body>
 </html>
+
 
 
 
