--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="img/hero.jpg" alt="Hero Image">
+                <img src="img/hero.jpeg" alt="Hero Image">
             </div>
         </div>
     </section>
@@ -647,6 +647,7 @@
     </script>
 </body>
 </html>
+
 
 
 
