--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <section class="about" id="about">
         <div class="about-content">
             <div class="about-image">
-                <img src="img/about.jpg" alt="About Image">
+                <img src="img/about.jpeg" alt="About Image">
             </div>
             <div class="about-text">
                 <h2>Tentang SkillBridge Global</h2>
@@ -647,6 +647,7 @@
     </script>
 </body>
 </html>
+
 
 
 
