--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         .hero-image {
             display: flex;
             justify-content: center;
+            object-fit: cover;
             align-items: center;
             min-height: 400px;
             background: rgba(255, 255, 255, 0.1);
@@ -298,6 +299,7 @@
 
         .about-image {
             min-height: 400px;
+            object-fit: cover;
             background: rgba(37, 99, 235, 0.1);
             border-radius: 1rem;
             display: flex;
@@ -647,6 +649,7 @@
     </script>
 </body>
 </html>
+
 
 
 
