--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 
         .hero-image img {
             max-width: 100%;
+            object-fit: cover;
             height: auto;
         }
 
@@ -309,7 +310,8 @@
         }
 
         .about-image img {
-            max-width: 60%;
+            max-width: 100%;
+            object-fit: cover;
             height: auto;
         }
 
@@ -649,6 +651,7 @@
     </script>
 </body>
 </html>
+
 
 
 
