--- a/login.html
+++ b/login.html
@@ -256,7 +256,8 @@
             <input type="email" id="email" placeholder="Email">
             <input type="password" id="password" placeholder="Password">
 
-            <button onclick="login()">Masuk</button>
+            <button onclick="login()">Masuk <a href="dashboard.html"></a></button>
+            
 
             <p>Belum punya akun? <a href="register.html">Daftar</a></p>
         </div>
