--- a/registrasi.html
+++ b/registrasi.html
@@ -222,7 +222,7 @@
         <form>
             <div class="form-group">
                 <label>Nama Lengkap</label>
-                <input type="text" placeholder="Masukkan nama Anda">
+                <input type="fullname" placeholder="Masukkan nama Anda">
             </div>
 
             <div class="form-group">
@@ -290,8 +290,8 @@
 </body>
     <script>
         document.getElementById('register-form').addEventListener('submit', function(e) {
-    e.preventDefault();  // Mencegah form disubmit
-
+    e.preventDefault();
+            
     const fullname = document.getElementById('register-fullname').value;
     const email = document.getElementById('register-email').value;
     const password = document.getElementById('register-password').value;
@@ -306,14 +306,13 @@
     const user = {
         fullname: fullname,
         email: email,
-        password: password  // Harusnya di-hash di backend, ini hanya contoh
+        password: password
     };
 
-    // Simpan user dengan email sebagai key
     localStorage.setItem(email, JSON.stringify(user));
 
     alert('Registrasi berhasil! Silakan login.');
-    window.location.href = 'login.html';  // Redirect ke halaman login
+    window.location.href = 'login.html'; 
 });
 
     </script>
