--- a/registrasi.html
+++ b/registrasi.html
@@ -240,7 +240,7 @@
 
         <div class="login-link">
             Sudah punya akun?
-            <a href="login.html">Masuk di sini</a>
+            <a href="dashboard.html">Masuk di sini</a>
         </div>
     </section>
 
