--- a/registrasi.html
+++ b/registrasi.html
@@ -235,12 +235,12 @@
                 <input type="password" placeholder="Buat kata sandi">
             </div>
 
-            <button class="btn-primary">Daftar Sekarang</button>
+            <button class="btn-primary">Daftar Sekarang <a href="dashboard.html"></a></button>
         </form>
 
         <div class="login-link">
             Sudah punya akun?
-            <a href="dashboard.html">Masuk di sini</a>
+            <a href="login.html">Masuk di sini</a>
         </div>
     </section>
 
