--- a/registrasi.html
+++ b/registrasi.html
@@ -311,8 +311,8 @@
 
     localStorage.setItem(email, JSON.stringify(user));
 
-    alert('Registrasi berhasil! Silakan login.');
-    window.location.href = 'login.html'; 
+    alert('Registrasi berhasil!');
+    window.location.href = 'dashboard.html'; 
 });
 
     </script>
