--- a/registrasi.html
+++ b/registrasi.html
@@ -235,7 +235,7 @@
                 <input type="password" placeholder="Buat kata sandi">
             </div>
 
-            <button class="btn-primary">Daftar Sekarang <a href="dashboard.html"></a></button>
+            <button class="btn-primary" type="submit">Daftar Sekarang</button>
         </form>
 
         <div class="login-link">
