--- a/registrasi.html
+++ b/registrasi.html
@@ -219,7 +219,7 @@
         <h2>Buat Akun Baru</h2>
         <p>Mulai perjalanan karir global Anda bersama SkillBridge Global.</p>
 
-        <form>
+        <form id="register-form">
             <div class="form-group">
                 <label>Nama Lengkap</label>
                 <input type="fullname" placeholder="Masukkan nama Anda">
