--- a/registrasi.html
+++ b/registrasi.html
@@ -221,22 +221,21 @@
 
         <form id="register-form">
             <div class="form-group">
-                <label>Nama Lengkap</label>
-                <input type="fullname" placeholder="Masukkan nama Anda">
-            </div>
+        <label>Nama Lengkap</label>
+        <input type="text" id="register-fullname" placeholder="Masukkan nama Anda" required>
+    </div>
 
-            <div class="form-group">
-                <label>Email</label>
-                <input type="email" placeholder="Masukkan email">
-            </div>
+    <div class="form-group">
+        <label>Email</label>
+        <input type="email" id="register-email" placeholder="Masukkan email" required>
+    </div>
 
-            <div class="form-group">
-                <label>Kata Sandi</label>
-                <input type="password" placeholder="Buat kata sandi">
-            </div>
+    <div class="form-group">
+        <label>Kata Sandi</label>
+        <input type="password" id="register-password" placeholder="Buat kata sandi" required>
+    </div>
 
-            <button class="btn-primary" type="submit">Daftar Sekarang<a href="dashboard.html"></a></button>
-        </form>
+    <button class="btn-primary" type="submit">Daftar Sekarang</button>
 
         <div class="login-link">
             Sudah punya akun?
@@ -290,20 +289,17 @@
 </body>
     <script>
         document.getElementById('register-form').addEventListener('submit', function(e) {
-    e.preventDefault();
+    e.preventDefault(); 
             
     const fullname = document.getElementById('register-fullname').value;
     const email = document.getElementById('register-email').value;
     const password = document.getElementById('register-password').value;
 
-    // Cek jika email sudah terdaftar di localStorage
     if (localStorage.getItem(email)) {
         alert('Email sudah terdaftar!');
         return;
     }
 
-    // Simpan data pengguna di localStorage
-    const user = {
         fullname: fullname,
         email: email,
         password: password
@@ -312,8 +308,8 @@
     localStorage.setItem(email, JSON.stringify(user));
 
     alert('Registrasi berhasil!');
+
     window.location.href = 'dashboard.html'; 
 });
-
     </script>
 </html>
