--- a/registrasi.html
+++ b/registrasi.html
@@ -222,17 +222,17 @@
         <form id="register-form">
             <div class="form-group">
         <label>Nama Lengkap</label>
-        <input type="text" id="register-fullname" placeholder="Masukkan nama Anda" required>
+        <input type="text" id="fullname" placeholder="Masukkan nama Anda" required>
     </div>
 
     <div class="form-group">
         <label>Email</label>
-        <input type="email" id="register-email" placeholder="Masukkan email" required>
+        <input type="email" id="email" placeholder="Masukkan email" required>
     </div>
 
     <div class="form-group">
         <label>Kata Sandi</label>
-        <input type="password" id="register-password" placeholder="Buat kata sandi" required>
+        <input type="password" id="password" placeholder="Buat kata sandi" required>
     </div>
 
     <button class="btn-primary" type="submit">Daftar Sekarang</button>
@@ -286,14 +286,14 @@
             <p>&copy; 2025 SkillBridge Global. Semua hak dilindungi.</p>
         </div>
     </footer>
-</body>
+
     <script>
         document.getElementById('register-form').addEventListener('submit', function(e) {
     e.preventDefault(); 
             
-    const fullname = document.getElementById('register-fullname').value;
-    const email = document.getElementById('register-email').value;
-    const password = document.getElementById('register-password').value;
+    const fullname = document.getElementById('fullname').value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
     if (localStorage.getItem(email)) {
         alert('Email sudah terdaftar!');
@@ -312,4 +312,6 @@
     window.location.href = 'dashboard.html'; 
 });
     </script>
+    
+</body>
 </html>
