--- a/registrasi.html
+++ b/registrasi.html
@@ -309,6 +309,7 @@
 
     alert('Registrasi berhasil!');
 
+    console.log('Pengalihan ke dashboard.html');
     window.location.href = 'dashboard.html'; 
 });
     </script>
