--- a/registrasi.html
+++ b/registrasi.html
@@ -289,29 +289,33 @@
 
     <script>
         document.getElementById('register-form').addEventListener('submit', function(e) {
-    e.preventDefault(); 
-            
+    e.preventDefault();
+
     const fullname = document.getElementById('fullname').value;
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
 
     if (localStorage.getItem(email)) {
         alert('Email sudah terdaftar!');
+        window.location.href = 'login.html';
         return;
     }
 
+    const user = {
         fullname: fullname,
         email: email,
         password: password
     };
 
-    localStorage.setItem(email, JSON.stringify(user));
+    localStorage.setItem(email, JSON.stringify(user)); 
+   
+    sessionStorage.setItem('loggedInUser', email);
 
     alert('Registrasi berhasil!');
 
-    console.log('Pengalihan ke dashboard.html');
-    window.location.href = 'dashboard.html'; 
+    window.location.href = 'dashboard.html';
 });
+
     </script>
     
 </body>
