--- a/login.html
+++ b/login.html
@@ -232,6 +232,30 @@
             border-top: 1px solid #374151;
             color: #9ca3af;
         }
+
+        /* Untuk perangkat dengan layar kecil */
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    .nav-actions a {
+        padding: 0.5rem 1rem;
+    }
+
+    footer {
+        padding: 2rem;
+    }
+
+    .footer-content {
+        grid-template-columns: 1fr;
+    }
+}
     </style>
 </head>
 
