--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -291,8 +291,8 @@
         document.getElementById('login-form').addEventListener('submit', function(e) {
     e.preventDefault();
 
-    const email = document.getElementById('login-email').value;
-    const password = document.getElementById('login-password').value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
     // Ambil data user dari localStorage
     const userData = localStorage.getItem(email);
@@ -313,5 +313,6 @@
     }
 });
 </script>
+    
 </body>
 </html>
